--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
