--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This README provides instructions on how to set up and run the application.",
   "main": "index.js",
   "scripts": {
-    "build": "cd client && npm run build && cd ../server && npm run build"
+    "build": "cd client && npm run build && cd ../server && npm run build",
+    "start": "concurrently \"cd client && npm run dev\" \"cd server && npm run dev\""
   },
   "keywords": [],
   "author": "",
